# Docky

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
docs/superpowers/specs/: 2026-07-08-m4-evaluation-design.md
eval/: dataset.json
notes/: 00-RAG是什么.md  01-环境搭建.md  02-embedding与向量.md  03-切分chunking.md  04-检索与生成.md  05-服务化.md  06-评估.md  07-检索优化.md  08-踩坑记录.md
scripts/: ask.py  eval.py  healthcheck.py  ingest.py  serve.py
specs/: 2026-07-09-m5-retrieval-optimization-design.md
src/rag/: api.py  chunking.py  config.py  evaluate.py  generate.py  ingest.py  interfaces.py  loader.py  models.py  pipeline.py  query_rewrite.py  rerank.py  retrieve.py  scoring.py
src/rag/providers/: ollama_embedder.py  ollama_llm.py  qdrant_store.py
tests/: test_api.py  test_chunking.py  test_config.py  test_evaluate.py  test_generate.py  test_ingest.py  test_loader.py  test_markdown_chunking.py  test_models.py  test_ollama_embedder.py  test_ollama_llm.py  test_pipeline.py  test_qdrant_store.py  test_query_rewriter.py  test_reranker.py  test_retrieve.py  test_scoring.py
