[project]
name = "rag-docs"
version = "0.1.0"
description = "A learning-oriented RAG system for technical documentation"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",              # 调用 Ollama HTTP 接口
    "qdrant-client>=1.9",       # Qdrant 客户端
    "pydantic>=2.7",            # 数据模型
    "pydantic-settings>=2.3",   # 读取配置/环境变量
    "fastapi>=0.111",           # M3 用,先装上
    "uvicorn>=0.30",            # M3 用,先装上
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rag"]
